# hackdays2025

./: .gitignore  README.md  teams.md
.github/workflows/: validate-submissions.yml
.scripts/templates/: README.md  submission_instructions.md
submissions/airgrist/: README.md
submissions/albert-ai/: README.md
submissions/baller/: README.md
submissions/bib4win/: README.md
submissions/big-blue-button/: README.md
submissions/comparia/: README.md
submissions/cristal/: README.md
submissions/dbt/: README.md
submissions/decision-makers/: README.md
submissions/devoteam/: Dockerfile  README.md  docker-compose.yml  requirements.txt
submissions/dgnum-experts/: README.md
submissions/dgnum-x-nixos-community/: README.md
submissions/doc-spec/: README.md
submissions/doca-team/: README.md
submissions/docateam/: README.md  submission_instructions.md
submissions/docateam/src/agent_llm/: app.py  base_slide.json  initial_image.json  llm_service.py  polotno.json  prompt_template.py  pyproject.toml  requirement.txt  test_image.json
submissions/docs-to-git/: README.md
submissions/element/: README.md
submissions/ergonogrist/: README.md
submissions/euos/: README.md
submissions/grist-3-ia/: README.md
submissions/handi-access/: README.md
submissions/haxathon/: README.md
submissions/incubator-for-ai/: README.md
submissions/interstis/: README.md
submissions/ironcalc/: README.md
submissions/jeu-twake-et-match/: README.md
submissions/la-suite-territoriale/: README.md
submissions/la-suite-ui/: README.md
submissions/lin-phone/: README.md
(+153 files in other folders)
